# rover

./: .clang-format-ignore  .clang-tidy  .clangd  .gitignore  LICENSE  Makefile  README.md  bootstrap.sh  meson.build  openocd.cfg  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-integration.txt  requirements.txt  rover.dbc  stm32f302ret6.ini  system.json
apps/: meson.build
apps/battery-monitor/: meson.build
apps/battery-monitor/include/: adc.h  app.h  battery.h  ck-data.h  ck-rx-letters.h  freertos-tasks.h  jumpers.h  led.h  ports.h  potentiometer.h  power.h
apps/battery-monitor/src/: adc.c  app.c  battery.c  ck-data.c  ck-rx-letters.c  freertos-tasks.c  interrupts.c  jumpers.c  led.c  main.c  peripherals.c  potentiometer.c  power.c
apps/battery-monitor/tests/: adc-internal.h  battery-fakes.c  battery-fakes.h  battery-internal.h  battery-test-utils.c  battery-test-utils.h  meson.build  test-adc.c  test-battery.c
apps/battery-node/: battery-node.dbc  meson.build
apps/battery-node/include/: app.h  interrupts.h  main.h  peripherals.h  ports.h
apps/battery-node/src/: app.c  interrupts.c  main.c  peripherals.c  stm32f3xx_hal_msp.c
apps/brake/: meson.build
apps/brake/include/: ck-data.h  wheel-speed.h
apps/brake/src/: ck-data.c  ck.c  interrupts.c  peripherals.c  potentiometer.c  report.c  wheel-speed.c
apps/gpio-port-test/: meson.build
apps/gpio-port-test/src/: main.c
apps/io-node/: meson.build
apps/io-node/include/: app.h  main.h  peripherals.h  ports.h
apps/io-node/src/: app.c  interrupts.c  main.c  peripherals.c  stm32f3xx_hal_msp.c
apps/joystick/: meson.build
apps/joystick-adapter/: meson.build
apps/joystick-adapter/src/: main.c
apps/joystick/include/: app.h  interrupts.h  ports.h
apps/joystick/src/: interrupts.c  main.c  peripherals.c
apps/obstacle-detector/: meson.build
apps/obstacle-detector/include/: adc.h  ck-data.h  ck.h  obstacle-detector.h  peripherals.h  ports.h
apps/obstacle-detector/src/: adc.c  ck-data.c  ck.c  interrupts.c  main.c  obstacle-detector.c  peripherals.c  report.c
apps/radio-node/: meson.build
apps/radio-node/include/: interrupts.h  main.h  peripherals.h  ports.h
apps/radio-node/src/: interrupts.c  main.c  peripherals.c
apps/sbus-receiver/: meson.build
apps/sbus-receiver/include/: airbridge.h  ck-data.h  freertos-tasks.h  peripherals.h  ports.h  sbus.h  steering.h
apps/sbus-receiver/src/: airbridge.c  ck-data.c  freertos-tasks.c  interrupts.c  main.c  peripherals.c  sbus.c  steering.c
apps/servo/: meson.build  servo.dbc
apps/servo-node/: meson.build
apps/servo-node/include/: app.h  interrupts.h  main.h  peripherals.h  ports.h
apps/servo-node/src/: app.c  interrupts.c  main.c  peripherals.c  stm32f3xx_hal_msp.c
apps/servo/include/: adc.h  app.h  ck-data.h  ck-rx-letters.h  failsafe.h  freertos-tasks.h  interrupts.h  peripherals.h  pid.h  ports.h  potentiometer.h  pwm.h  servo.h  settings.h
apps/servo/src/: adc.c  app.c  ck-data.c  ck-rx-letters.c  failsafe.c  freertos-tasks.c  interrupts.c  main.c  peripherals.c  pid.c  potentiometer.c  pwm.c  servo.c  settings.c
apps/servo/tests/: meson.build  servo-internal.h  test-adc.c  test-servo.c
apps/wheel/: meson.build
apps/wheel/include/: peripherals.h  ports.h  potentiometer.h  report.h
apps/wheel/src/: ck-data.c  ck.c  main.c  potentiometer.c  wheel-speed.c
bootloader/: meson.build
bootloader/include/: ck-data.h
bootloader/src/: app.ld  bootloader.ld  ck-data.c  main.c  postmaster.c
common/: meson.build
common/can-kingdom/: meson.build
common/can-kingdom/include/: king.h  mayor.h  postmaster.h  types.h
common/can-kingdom/src/: king.c  mayor.c  postmaster-dummy.c
common/can-kingdom/tests/: king-test.c  mayor-test.c
common/include/: can-utils.h  utils.h
common/src/: can-utils.c  utils.c
common/stm32/: meson.build
common/stm32-postmaster/: meson.build
common/stm32-postmaster/include/: can-hal.h
common/stm32-postmaster/src/: can-hal.c  postmaster.c
common/stm32-utils/: meson.build
common/stm32-utils/include/: utils.h
common/stm32-utils/src/: utils.c
common/stm32/include/: common-interrupts.h
common/stm32/src/: STM32F302RETx_FLASH.ld  startup_stm32f302xe.s
common/utils/: meson.build
common/utils/include/: utils.h
common/utils/src/: utils.c
docs/: Doxyfile  apps.rst  assets.rst  boards.rst  can-kingdom.rst  conf.py  getting-started.rst  hardware.rst  index.rst  mechanical-components.rst  meson.build  software.rst  videos.rst
io-node/: .gitignore  .mxproject  STM32F302RETx_FLASH.ld  io-node.ioc  io_node.ioc  meson.build
io-node/Core/Inc/: FreeRTOSConfig.h  app.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
io-node/Core/Src/: app.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
io-node/inc/: stm32f3xx_it.h
io-node/src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
libs/: meson.build
libs/arena/: meson.build
libs/arena/include/: arena.h
libs/arena/src/: arena.c
libs/arena/tests/: arena-test.c  (+1 more)
libs/can-kingdom/: meson.build
libs/circuits/: meson.build
libs/float/: meson.build
libs/freertos-config/: meson.build
libs/json/: meson.build
libs/postmaster/: meson.build
libs/rover/: meson.build
libs/stm32-common/: meson.build
libs/stm32-postmaster/: meson.build
libs/test-utils/: meson.build
rover_py/: calibrate_battery_monitor.py  candump.py  fw_update.py  generate-system-conf.py  live_demo.py  plot_voltage.py  pyproject.toml  record_cell_voltage.py  rover_startup.py
rover_py/demo/: animate.py  record.py
rover_py/flasher/: flasher.py
rover_py/rover/: __init__.py  battery.py  bootloader.py  brake.py  rover.py  servo.py  wheel.py
rover_py/tests/: test_battery_conf.py  test_battery_stress.py  test_brake_conf.py  test_braking.py  test_change_bitrate.py  test_radio_detection.py  test_servo_conf.py  test_wheel_conf.py
system/: battery-monitor.json  generate-system-json.py  meson.build  motor.json  sbus-receiver.json  servo.json  system-base.json  wheel-front-left.json  wheel-front-right.json  wheel-rear-left.json  wheel-rear-right.json
(+193 files in other folders)
