subdir('can-kingdom')
subdir('stm32')
subdir('stm32-postmaster')
subdir('stm32-utils')

common_inc = [
  can_kingdom_inc,
  stm32_common_inc,
  stm32_postmaster_inc,
  stm32_utils_inc,
]

common_src = [
  can_kingdom_src,
  stm32_common_src,
  stm32_postmaster_src,
  stm32_utils_src,
]

common_tidy_files = [
  can_kingdom_tidy_files,
  stm32_common_tidy_files,
  stm32_postmaster_tidy_files,
  stm32_utils_tidy_files,
]
