subdir('test-utils')
subdir('can-kingdom')
subdir('rover')
subdir('stm32-common')
subdir('circuits')

common_deps += [
  rover_dep,
  can_kingdom_mayor_dep,
  stm32_common_dep,
  circuits_dep,
]

common_libs_tidy_files = [
  can_kingdom_tidy_files,
  rover_tidy_files,
  stm32_common_tidy_files,
  circuits_tidy_files,
]
