[project]
name = "rover_py"
version = "0.0.1"
dependencies = [
    "canlib>=1.27.606",
]
authors = [
  { name="CanEduDev", email="support@canedudev.com" },
]
description = "Helpers for interacting with the CanEduDev Rover"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/canedudev/rover"
Issues = "https://github.com/canedudev/rover/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rover"]
